[package]
name = "myping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = { version = "0.8.6", features = ["os-poll", "net", "os-ext"] }
socket2 = { version = "0.5.2", features = ["all"] }
tokio = { version = "1.34.0", features = ["full"] }
